--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=8080
 DATABASE_URL=postgresql://postgres:postgres@postgres:5432/urlshortener
-SECRET_KEY=0x2F3A9C7B1Dn
+SECRET_KEY=0x2F3A9C7
